adds ts config asset

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,15 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "ESNext",
-    "lib": ["ES6", "DOM"],
     "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "lib": ["es6", "dom", "dom.iterable", "scripthost"],
+    "typeRoots": ["./node_modules/phaser/types"],
+    "types": ["Phaser"]
   },
   "include": ["src"]
 }
